ecmascript/parser/tests/test262-error-references/fail/4045c354c559bed0.js.stderr
error: Unexpected token `}`. Expected identifier
 --> $DIR/tests/test262-parser/fail/4045c354c559bed0.js:1:4
  |
1 | ({0} = 0)
  |    ^

